added loading animation, other changes

--- a/JS/pocket-chat/public/css/main.css
+++ b/JS/pocket-chat/public/css/main.css
@@ -19,6 +19,9 @@ form {
 .no-show {
     display: none;
 }
+.error {
+    color: red
+}
 /* spinner */
 .lds-dual-ring {
     display: inline-block;
