multiple fixes and changes.

--- a/Android/pocket-chat/app/src/main/res/layout/passphrase_dialog.xml
+++ b/Android/pocket-chat/app/src/main/res/layout/passphrase_dialog.xml
@@ -22,7 +22,7 @@
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:background="#FFFFFF"
         android:editable="true"
@@ -37,14 +37,19 @@
         android:id="@+id/dialog_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:lines="3"
+        android:maxLines="3"
+        android:minLines="3"
+        android:singleLine="false"
         android:text="Wallet passphrase"
         android:textAlignment="center"
         android:textColor="#FAF7F7"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
