Android eth commit
created android eth.

--- a/ETH/Android/pocket-chat/app/src/main/res/layout/create_wallet.xml
+++ b/ETH/Android/pocket-chat/app/src/main/res/layout/create_wallet.xml
@@ -38,7 +38,7 @@
         tools:text="Public Address" />
 
     <Button
-        android:id="@+id/import_wallet_btn"
+        android:id="@+id/generate_wallet_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
