--- a/AION/Android/pocket-chat/app/src/main/res/layout/passphrase_dialog.xml
+++ b/AION/Android/pocket-chat/app/src/main/res/layout/passphrase_dialog.xml
@@ -8,17 +8,19 @@
     >
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
+        android:id="@+id/backgroundImage"
+        android:layout_width="411dp"
         android:layout_height="218dp"
+        android:background="@drawable/b1x2"
         android:scaleType="centerCrop"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/b1x2" />
+        />
 
     <EditText
-        android:id="@+id/private_key_text"
+        android:id="@+id/passphrase_text"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -36,11 +38,13 @@
     <EditText
         android:id="@+id/dialog_title"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
+        android:editable="false"
         android:ems="10"
+        android:enabled="false"
         android:inputType="textPersonName"
         android:lines="3"
         android:maxLines="3"
@@ -49,7 +53,8 @@
         android:text="Wallet passphrase"
         android:textAlignment="center"
         android:textColor="#FAF7F7"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
