Fixed Eth chat app create, import wallet issues and retrieve messages

--- a/AION/Android/pocket-chat/app/src/main/res/layout/create_wallet.xml
+++ b/AION/Android/pocket-chat/app/src/main/res/layout/create_wallet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/b1x2">
+    android:background="@mipmap/b1x2">
 
     <TextView
         android:id="@+id/passphrase_text"
