--- a/AION/Android/pocket-chat/app/src/main/res/layout/welcome_screen.xml
+++ b/AION/Android/pocket-chat/app/src/main/res/layout/welcome_screen.xml
@@ -9,7 +9,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/b1x2"
+    android:background="@mipmap/b1x2"
     >
 
     <ImageView
