--- a/AION/Android/pocket-chat/app/src/main/res/layout/passphrase_dialog.xml
+++ b/AION/Android/pocket-chat/app/src/main/res/layout/passphrase_dialog.xml
@@ -11,7 +11,7 @@
         android:id="@+id/backgroundImage"
         android:layout_width="411dp"
         android:layout_height="218dp"
-        android:background="@drawable/b1x2"
+        android:background="@mipmap/b1x2"
         android:scaleType="centerCrop"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
