--- a/ETH/Android/pocket-chat/app/src/main/res/layout/create_wallet.xml
+++ b/ETH/Android/pocket-chat/app/src/main/res/layout/create_wallet.xml
@@ -8,13 +8,13 @@
 
     <TextView
         android:id="@+id/private_key_text"
-        android:layout_width="181dp"
-        android:layout_height="40dp"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
         android:background="#FFFFFF"
-        android:text="TextView"
+        android:text="Private Key"
         android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,14 +23,14 @@
 
     <TextView
         android:id="@+id/public_key_text"
-        android:layout_width="181dp"
+        android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="180dp"
         android:layout_marginEnd="20dp"
         android:background="#FFFFFF"
         android:editable="false"
-        android:text="TextView"
+        android:text="Public Address"
         android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/private_key_text" />
-
     <Button
         android:id="@+id/continue_btn"
         android:layout_width="wrap_content"
@@ -68,7 +67,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/private_key_text" />
-
     <EditText
         android:id="@+id/dialog_title"
         android:layout_width="wrap_content"
